WIP: Working on paralax wallpaper

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,18 @@
+$screenWidth: 7000;
+
+@function renderStars($amount){
+  $returnVal: '#{random($screenWidth)}px #{random($screenWidth)}px #3A68E8';
+  @for $i from 2 through $amount{
+    $returnVal: '#{$returnVal} , #{random($screenWidth)}px #{random($screenWidth)}px #40A4FF';
+  }
+
+  @return unquote($string: $returnVal)
+}
+
+$shadows-small: renderStars(700);
+$shadows-medium: renderStars(400);
+$shadows-big: renderStars(300);
+
 * {
   padding: 0;
   border: 0;
@@ -9,38 +24,60 @@ html {
 
 body {
   background: rgb(15, 0, 77);
-  background: radial-gradient(circle, rgb(8, 0, 41) 0%, rgb(9, 0, 15) 100%);
+  background: radial-gradient(circle, rgb(7, 0, 34) 0%, rgb(19, 0, 32) 100%);
   background-attachment: fixed;
 }
 
-.starfield{
-
-}
-
-.star {
-  background: transparent url(../src/vendor/icons/star-regular.svg) center
-    no-repeat;
-  position: relative;
-  height: 5px;
-  width: 5px;
-}
-
-@for $i from 1 through 100 {
-  .star:nth-of-type(#{$i}) {
-    top: random(101) - 1 + vh;
-    left: random(101) - 1 + vw;
-    width: random(2) + px;
-    height: random(2) + px;
-    opacity: random(50) / 100 + 0.5;
-    animation: moveStar infinite;
+.stars{
+  width: 1px;
+  height: 1px;
+  background: transparent;
+  box-shadow: $shadows-small;
+  animation			: animStar 50s linear infinite;
+    
+  &:after{
+    content: " ";
+    position: absolute;
+    top: 2000px;
+    width: 1px;
+    height: 1px;
+    background: transparent;
+    box-shadow: $shadows-small;
   }
 }
-
-@keyframes moveStar {
-  from {
-    transform: translateY(0);
+    
+.stars2{
+  width: 2px;
+  height: 2px;
+  background: transparent;
+  box-shadow: $shadows-medium;
+  animation			: animStar 100s linear infinite;
+    
+  &:after{
+    content: " ";
+    position: absolute;
+    top: 2000px;
+    width: 2px;
+    height: 2px;
+    background: transparent;
+    box-shadow: $shadows-medium;
   }
-  to {
-    transform: translateY(-2000);
+}
+    
+.stars3{
+  width: 3px;
+  height: 3px;
+  background: transparent;
+  box-shadow: $shadows-big;
+  animation			: animStar 150s linear infinite;
+    
+  &:after{
+    content: " ";
+    position: absolute;
+    top: 2000px;
+    width: 3px;
+    height: 3px;
+    background: transparent;
+    box-shadow: $shadows-big;
   }
 }
