--- a/src/App.scss
+++ b/src/App.scss
@@ -38,8 +38,7 @@ body {
   height: 1px;
   background: transparent;
   box-shadow: $shadows-small;
-  -webkit-transform: translateZ(-2px) scale(3);
-  transform: translateZ(-2px) scale(3);
+  animation: starMove 50s linear infinite;
     
   &:after{
     content: " ";
@@ -57,9 +56,8 @@ body {
   height: 2px;
   background: transparent;
   box-shadow: $shadows-medium;
-  -webkit-transform: translateZ(-6px) scale(5);
-  transform: translateZ(-6px) scale(5);
-    
+  animation: starMove 100s linear infinite;
+
   &:after{
     content: " ";
     position: absolute;
@@ -76,8 +74,7 @@ body {
   height: 3px;
   background: transparent;
   box-shadow: $shadows-big;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
+  animation: starMove 150s linear infinite;
     
   &:after{
     content: " ";
@@ -87,5 +84,14 @@ body {
     height: 3px;
     background: transparent;
     box-shadow: $shadows-big;
+  }
+}
+
+@keyframes starMove{
+  from{
+    transform: translateY(-2000px)
+  }
+  to{		
+    transform: translateY(0px)
   }
 }
