UPDATE: Back working again from mental health break, have a background I'm happy wiht

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,14 +31,18 @@ body {
 .App{
   -webkit-perspective: 1px;
   perspective: 1px;
+  max-width: 1000px;
 }
 
-.stars{
+.stars1{
   width: 1px;
   height: 1px;
   background: transparent;
   box-shadow: $shadows-small;
-  animation: starMove 50s linear infinite;
+  animation: starMove 150s linear infinite;
+  -webkit-transform: translateZ(-2px) scale(3);
+  transform: translateZ(-2px) scale(3);
+  
     
   &:after{
     content: " ";
@@ -56,7 +60,9 @@ body {
   height: 2px;
   background: transparent;
   box-shadow: $shadows-medium;
-  animation: starMove 100s linear infinite;
+  animation: starMove 200s linear infinite;
+  -webkit-transform: translateZ(-6px) scale(5);
+  transform: translateZ(-6px) scale(5);
 
   &:after{
     content: " ";
@@ -74,7 +80,9 @@ body {
   height: 3px;
   background: transparent;
   box-shadow: $shadows-big;
-  animation: starMove 150s linear infinite;
+  animation: starMove 250s linear infinite;
+  -webkit-transform: translateZ(-12px) scale(6);
+  transform: translateZ(-12px) scale(6);
     
   &:after{
     content: " ";
