FIX: Patched annoying star rendering bug that messed up page height

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -29,6 +29,8 @@ body {
   background-attachment: fixed;
   font-family: 'Afacad Flux', Arial, Helvetica;
   color: white;
+  height: fit-content;
+  overflow: hidden;
 }
 
 .App {
@@ -40,11 +42,13 @@ body {
   align-items: center;
   z-index: 999;
   height: 100vh;
+  display: flex;
+  margin: auto;
 }
 
 .stars{
-  position: absolute;
   z-index: 2;
+  border: 1px solid red;
 }
 
 .stars1 {
@@ -52,7 +56,7 @@ body {
   height: 1px;
   background: transparent;
   box-shadow: $shadows-small;
-  animation: starMove 110s linear infinite;
+  animation: starMove 125s linear infinite;
 
   &:after {
     content: " ";
@@ -70,7 +74,7 @@ body {
   height: 2px;
   background: transparent;
   box-shadow: $shadows-medium;
-  animation: starMove 160s linear infinite;
+  animation: starMove 155s linear infinite;
 
   &:after {
     content: " ";
@@ -88,7 +92,7 @@ body {
   height: 3px;
   background: transparent;
   box-shadow: $shadows-big;
-  animation: starMove 210s linear infinite;
+  animation: starMove 200s linear infinite;
 
   &:after {
     content: " ";
