--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -43,6 +43,7 @@ body {
   z-index: 999;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   margin: auto;
 }
 
@@ -56,7 +57,7 @@ body {
   height: 1px;
   background: transparent;
   box-shadow: $shadows-small;
-  animation: starMove 125s linear infinite;
+  animation: starMove 105s linear infinite;
 
   &:after {
     content: " ";
@@ -92,7 +93,7 @@ body {
   height: 3px;
   background: transparent;
   box-shadow: $shadows-big;
-  animation: starMove 200s linear infinite;
+  animation: starMove 250s  linear infinite;
 
   &:after {
     content: " ";
@@ -106,7 +107,7 @@ body {
 }
 
 .app__main-text{
-  font-size: 9em;
+  font-size: 10em;
 }
 
 @keyframes starMove {
