--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -106,8 +106,16 @@ body {
   }
 }
 
+.app__section{
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
 .app__main-text{
-  font-size: 10em;
+  font-size: 13em;
+  text-align: center;
+  text-wrap: stable;
 }
 
 @keyframes starMove {
