--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,33 +1,34 @@
-$screenWidth: 2000;
+$screenWidth: 5120;
 
 @font-face {
   font-family: "Afacad Flux";
-  src: url('../../../public/fonts/AfacadFlux-Regular.woff') format(woff);
+  src: url("../../../public/fonts/AfacadFlux-Regular.woff") format(woff);
 }
 
 @function renderStars($amount, $color) {
-  $returnVal: '#{random(2000)}px #{random(2000)}px #{$color}';
+  $returnVal: "#{random($screenWidth)}px #{random($screenWidth)}px #{$color}";
   @for $i from 2 through $amount {
-    $returnVal: '#{$returnVal} , #{random(2000)}px #{random(2000)}px #{$color}';
+    $returnVal: "#{$returnVal} , #{random($screenWidth)}px #{random($screenWidth)}px #{$color}";
   }
 
   @return unquote($returnVal);
 }
 
-$shadows-small: renderStars(700, '#FF4DFF');
-$shadows-medium: renderStars(200,'#A64DFF');
-$shadows-big: renderStars(100,'#3A68E8');
+$shadows-tiny: renderStars(100, "#00FFCC");
+$shadows-small: renderStars(700, "#FF4DFF");
+$shadows-medium: renderStars(200, "#A64DFF");
+$shadows-big: renderStars(100, "#3A68E8");
 
 * {
   padding: 0;
   margin: 0;
 }
 
-button:hover{
+button:hover {
   cursor: pointer;
 }
 
-html{
+html {
   height: 100%;
 }
 
@@ -35,7 +36,7 @@ body {
   background: rgb(15, 0, 77);
   background: radial-gradient(circle, rgb(3, 0, 17) 0%, rgb(7, 0, 12) 100%);
   background-attachment: fixed;
-  font-family: 'Afacad Flux', Arial, Helvetica;
+  font-family: "Afacad Flux", Arial, Helvetica;
   color: white;
   height: fit-content;
   overflow: hidden;
@@ -55,18 +56,19 @@ body {
   margin: auto;
 }
 
-.stars{
+.stars {
   z-index: 2;
   border: 1px solid red;
   background: transparent;
+  position: absolute;
 }
 
 .stars1 {
-  width: 1px;
-  height: 1px;
+  width: 1.5px;
+  height: 1.5px;
 
   box-shadow: $shadows-small;
-  animation: starMove 5s linear infinite;
+  animation: starMove 105s linear infinite;
 
   &:after {
     content: " ";
@@ -74,7 +76,7 @@ body {
     top: 2000px;
     width: 1px;
     height: 1px;
-   
+
     box-shadow: $shadows-small;
   }
 }
@@ -84,7 +86,7 @@ body {
   height: 2px;
 
   box-shadow: $shadows-medium;
-  animation: starMove 5s linear infinite;
+  animation: starMove 175s linear infinite;
 
   &:after {
     content: " ";
@@ -92,7 +94,7 @@ body {
     top: 2000px;
     width: 2px;
     height: 2px;
-    
+
     box-shadow: $shadows-medium;
   }
 }
@@ -100,9 +102,9 @@ body {
 .stars3 {
   width: 3px;
   height: 3px;
- 
+
   box-shadow: $shadows-big;
-  animation: starMove 5s  linear infinite;
+  animation: starMove 250s linear infinite;
 
   &:after {
     content: " ";
@@ -110,28 +112,75 @@ body {
     top: 2000px;
     width: 3px;
     height: 3px;
-  
+
     box-shadow: $shadows-big;
   }
 }
 
-.app__section{
+.stars4 {
+  width: 1px;
+  height: 1px;
+
+  box-shadow: $shadows-tiny;
+  animation: starMove 95s linear infinite;
+
+  &:after {
+    content: " ";
+    position: absolute;
+    top: 2000px;
+    width: 3px;
+    height: 3px;
+
+    box-shadow: $shadows-tiny;
+  }
+}
+
+.app__section {
   width: 100%;
   height: 100%;
   margin: auto;
+  overflow: visible;
 }
 
-.app__main-text{
+.app__main-text {
   font-size: 13em;
   text-align: center;
-  text-wrap: stable;
+  text-wrap: nowrap;
+
+  animation: floatAround linear infinite 25s;
+}
+
+.name{
+  animation: floatAround linear infinite 45s;
+}
+
+.occupation{
+  animation: floatAround linear infinite 35s;
 }
 
 @keyframes starMove {
   from {
-    transform: translateY(-2000px);
+      transform: translateY(0px);
+    }
+    to {
+      transform: translateY(-2000px);
+    }
+}
+
+@keyframes floatAround {
+  0% {
+    transform: translateX(0px);
   }
-  to {
-    transform: translateY(0px);
+  25% {
+    transform: translateX(15px) translateY(15px);
+  }
+  50% {
+    transform: translateX(-15px) translateY(-15px);
+  }
+  75% {
+    transform: translateX(15px) translateY(-15px);
+  }
+  100% {
+    transform: translateX(0px) translateY(0px);
   }
 }
