--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -49,11 +49,10 @@ body {
 .App {
   -webkit-perspective: 1px;
   perspective: 1px;
-  max-width: 1000px;
+  max-width: 1700px;
   padding: 15px;
   display: flex;
   align-items: center;
-  z-index: 999;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -146,15 +145,25 @@ body {
   font-size: 13em;
   text-align: center;
   text-wrap: nowrap;
-  animation: floatAround linear infinite 25s;
+}
+
+.top{
+  animation: 
+    floatAround linear infinite 65s,
+    fadeIn 2s ease-in 1s
 }
 
 .name {
-  animation: floatAround linear infinite 45s;
+  animation: floatAround linear infinite 45s,
+    fadeIn 3s ease-in;
 }
 
-.occupation {
+.occupation1 {
   animation: floatAround linear infinite 35s;
+}
+
+.occupation2{
+  animation: floatAround linear infinite 25s;
 }
 
 @keyframes starMove {
