UPDATE: Adding function for fade in without error

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -142,6 +142,11 @@ body {
   text-align: center;
   text-wrap: nowrap;
   animation-fill-mode: forwards;
+  visibility: hidden;
+}
+
+.app__main-text_shown{
+  visibility: visible;
 }
 
 .top {
