--- a/src/components/FeaturedWidget/FeaturedWidget.scss
+++ b/src/components/FeaturedWidget/FeaturedWidget.scss
@@ -3,7 +3,7 @@ $containerWidth: 210px;
 .featuredWidget {
   box-sizing: border-box;
   width: 300px;
-  height: 400px;
+  min-height: 430px;
 
  /* From https://css.glass */
 background: rgba(0, 255, 252, 0.14);
@@ -12,4 +12,11 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(2.1px);
 -webkit-backdrop-filter: blur(2.1px);
 border: 1px solid rgba(0, 255, 252, 1);
+}
+
+.featuredWidget__preview{
+    width: 100%;
+    height: calc(100% / 3);
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
 }
