--- a/src/components/FeaturedWidget/FeaturedWidget.scss
+++ b/src/components/FeaturedWidget/FeaturedWidget.scss
@@ -3,7 +3,7 @@ $containerWidth: 210px;
 .featuredWidget {
   box-sizing: border-box;
   width: 300px;
-  min-height: 430px;
+  max-height: 400px;
 
  /* From https://css.glass */
 background: rgba(0, 255, 252, 0.14);
@@ -16,7 +16,7 @@ border: 1px solid rgba(0, 255, 252, 1);
 
 .featuredWidget__preview{
     width: 100%;
-    height: calc(100% / 3);
+    height: calc(100% / 2);
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
 }
