--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -20,7 +20,7 @@ $shadows-small: renderStars(700, "#FF4DFF");
 $shadows-medium: renderStars(400, "#A64DFF");
 $shadows-big: renderStars(200, "#3A68E8");
 
-p, h1{
+p, h1, div{
   text-align: center;
 }
 
@@ -209,6 +209,8 @@ body {
 .app__widgetsContainer{
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+  max-width: 968px;
+  gap: 15px;
 }
 
 @-webkit-keyframes starMove {
