--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -26,9 +26,9 @@ p, h1, div, h2{
   text-align: center;
 }
 
-* {
-  padding: 0;
-  margin: 0;
+*{
+  padding: 0px;
+  margin: 0px;
 }
 
 button:hover {
