--- a/src/components/FeaturedWidget/FeaturedWidget.scss
+++ b/src/components/FeaturedWidget/FeaturedWidget.scss
@@ -1,7 +1,7 @@
 .featuredWidget {
   box-sizing: border-box;
-  max-width: 300px;
-  max-height: 400px;
+  width: 280px;
+  height: 400px;
   display: block;
   margin: 0px;
   padding: 0px;
@@ -27,7 +27,8 @@
 }
 
 .featuredWidget__githublink{
-  max-width: 300px;
+  display: block;
+  width: 300px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
