--- a/src/components/FeaturedWidget/FeaturedWidget.scss
+++ b/src/components/FeaturedWidget/FeaturedWidget.scss
@@ -35,3 +35,10 @@
   animation: marquee infinite;
   color: aqua;
 }
+
+.hover_effect{
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  color: aqua;
+}
