Making button link to this page on github

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -161,6 +161,18 @@ body {
   }
 }
 
+.app__github-asteroid{
+  background: transparent url('../../vendor/icons/github-brands-solid.svg') center no-repeat;
+  background-color: #6e5494;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 200px;
+  top: 40px;
+  animation: floatAround linear infinite 15s;
+  border-radius: 20px;
+  cursor: pointer;
+}
 
 .app__section {
   width: 100%;
