UPDATE: little floating github link now works

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -226,7 +226,7 @@ body {
   grid-template-columns: repeat(auto-fit, 280px);
   max-width: 968px;
   gap: 15px;
-  overflow-y: scroll;
+  //overflow-y: scroll;
 }
 
 @-webkit-keyframes starMove {
