--- a/src/components/FeaturedWidget/FeaturedWidget.scss
+++ b/src/components/FeaturedWidget/FeaturedWidget.scss
@@ -19,6 +19,7 @@
   height: calc(100% / 2);
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
+  border-bottom: 5px solid transparent;
   box-sizing: border-box;
 }
 
